traversal.snake.Snake.scala.error
Compilation error:
Snake:20: error: illegal start of simple expression
  }
  ^